# pcb

./: AGENTS.md  CHANGELOG.md  Cargo.toml  FORK.md  README.md  THIRD_PARTY_NOTICES.md  dist-workspace.toml  flake.nix  install.sh
crates/gerberx2/: Cargo.toml  README.md
crates/gerberx2/src/: from_artwork.rs  lib.rs  parse.rs  write.rs
crates/gerberx2/src/geometry/: extract.rs  mod.rs
crates/gerberx2/src/types/: mod.rs
crates/gerberx2/tests/: basic.rs
crates/ipc2581/: Cargo.toml
crates/ipc2581/src/: edit.rs  lib.rs  parse.rs  write.rs
crates/ipc2581/src/types/: avl.rs  ecad.rs  primitives.rs  transform.rs
crates/ipc2581/tests/: testcases.rs
crates/pcb/: Cargo.toml
crates/pcb-intern/: Cargo.toml
crates/pcb-intern/src/: lib.rs
crates/pcb-ipc2581-tools/: Cargo.toml  README.md
crates/pcb-ipc2581-tools/src/: board_array.rs  layers.rs  lib.rs  placement.rs  xnc.rs
crates/pcb-ipc2581-tools/src/accessors/: board.rs  bom.rs  components.rs  drills.rs  mod.rs
crates/pcb-ipc2581-tools/src/commands/: board_array_auto.rs  bom_edit.rs  cpl.rs  dfm.rs  html_export.rs  html_template.html.jinja  info.rs  mod.rs  outline.rs  render.rs  style.css  view.rs
crates/pcb-ipc2581-tools/src/geometry/: dxf.rs  extract.rs  mod.rs  render.rs
crates/pcb-ipc2581-tools/src/gerber/: export.rs  mod.rs
crates/pcb-ipc2581-tools/src/manufacturing/: drill.rs  export.rs  mod.rs
crates/pcb-ipc2581-tools/src/utils/: format.rs  history.rs  units.rs
crates/pcb-layout/: Cargo.toml
crates/pcb-layout/src/: lib.rs
crates/pcb-layout/src/scripts/: update_layout_file.py
crates/pcb-layout/tests/: fpid_change.rs  layout_generation.rs  moved.rs
crates/pcb-layout/tests/snapshots/: fpid_change__fpid_change_step1.log.snap  fpid_change__fpid_change_step2.log.snap  layout_generation__complex.layout.json.snap  layout_generation__complex.log.snap  layout_generation__component_side_sync.layout.json.snap  layout_generation__component_side_sync.log.snap  layout_generation__dnp.layout.json.snap  layout_generation__dnp.log.snap  layout_generation__graphics.layout.json.snap  layout_generation__graphics.log.snap  layout_generation__module_layout.layout.json.snap  layout_generation__module_layout.log.snap  layout_generation__multi_pads.layout.json.snap  layout_generation__multi_pads.log.snap  layout_generation__netclass_assignment.layout.json.snap  layout_generation__netclass_assignment.log.snap  layout_generation__not_connected.layout.json.snap  layout_generation__not_connected.log.snap  layout_generation__not_connected_single_pin_multi_pad.layout.json.snap  layout_generation__not_connected_single_pin_multi_pad.log.snap  layout_generation__simple.layout.json.snap  layout_generation__simple.log.snap  layout_generation__tracks.layout.json.snap  layout_generation__tracks.log.snap  layout_generation__zones.layout.json.snap  layout_generation__zones.log.snap  moved__moved_step1.log.snap  moved__moved_step2.log.snap
crates/pcb-sch/: Cargo.toml
crates/pcb-sch/src/: bom_table.rs  kicad_netlist.rs  kicad_schematic.rs  lib.rs  physical.rs  position.rs
crates/pcb-sch/src/bom/: availability.rs  core.rs
crates/pcb-test-utils/: Cargo.toml
crates/pcb-test-utils/src/: sandbox.rs  snapdir.rs
crates/pcb-zen/: Cargo.toml
crates/pcb-zen-core/: Cargo.toml
crates/pcb-zen-core/src/: config.rs  convert.rs  kicad_library.rs  lib.rs  load_spec.rs  resolution.rs  stdlib.rs  workspace.rs
crates/pcb-zen-core/src/lang/: builtin.rs  component.rs  context.rs  eval.rs  footprint.rs  interface.rs  module.rs  net.rs  param_decl.rs  spice_model.rs  symbol.rs  type_conversion.rs
crates/pcb-zen-core/tests/: component.rs  component_footprint_inference.rs  cross_package_load.rs  enum_component_properties.rs  file.rs  input.rs  load.rs  name_inference.rs  net.rs  not_connected.rs  part.rs  symbol.rs  test.rs
crates/pcb-zen-core/tests/common/: mod.rs
crates/pcb-zen-core/tests/snapshots/: component__component_properties.snap  enum_component_properties__enum_list_property_conversion.snap  enum_component_properties__enum_property_conversion.snap  input__config_types.snap  input__implicit_enum_conversion.snap  input__interface_mixed_templates_and_types.snap  input__interface_multiple_net_templates.snap  input__interface_nested_template.snap  input__interface_net_template_basic.snap  input__io_config.snap  input__io_config_with_help_text.snap  input__io_template_enforces_voltage_compatibility.snap  input__optional_io_config.snap  load__file_with_syntax_error.snap  net__interface_net_template_naming.snap  net__net_collision_in_child_module_error.snap  net__net_duplicate_names_error.snap  net__net_multiple_collisions_error.snap  net__net_type_cast_preserves_name_across_modules.snap  part__modifier_updates_part_and_alts.snap  part__part_not_overwritten_by_prop.snap  part__part_populates_scalars.snap  test__duplicate_component_name.snap  (+5 more)
crates/pcb-zen/src/: auto_deps.rs  cache_index.rs  git.rs  import_scanner.rs  lib.rs  resolve.rs  tags.rs  workspace.rs
crates/pcb-zen/tests/: assert.rs  canonical_snapshot.rs  component_properties.rs  enum_conversion.rs  input.rs  interface_templates.rs  interface_templates_snapshot.rs  kicad_inference_snapshot.rs  load_diagnostics.rs  module_loading.rs  net.rs  part.rs  placeholder.rs  spice_model.rs  test.rs  test_physical.rs
crates/pcb/src/: build.rs  bundle.rs  file_walker.rs  ipc2581.rs  kicad_project.rs  main.rs  mcp.rs  new.rs  package.rs
crates/pcb/tests/: build.rs  package.rs  simple.rs
crates/pcb/wix/: main.wxs
crates/pcbc/: Cargo.toml
crates/pcbc/src/: build.rs  bundle.rs  doc.rs  file_walker.rs  gerber.rs  info.rs  ipc2581.rs  layout.rs  list.rs  lsp.rs  main.rs  mod_cmd.rs  new.rs  open.rs  resolve.rs  sim.rs  test.rs  update.rs  vendor.rs
crates/pcbc/tests/: build.rs  doc.rs  electrical_checks.rs  info.rs  layout.rs  migrate.rs  moved.rs  netlist.rs  part.rs  path.rs  simple.rs  sync.rs  test_bench.rs
crates/rectify/: Cargo.toml  README.md
crates/rectify/src/: audit.rs  bench.rs  footprint.rs  fs_util.rs  main.rs  mesh.rs  patch.rs  pose.rs  progress.rs  raster.rs
(+1180 files in other folders)
