[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.71"
edition = "2024"
repository = "https://github.com/diodeinc/pcb"
homepage = "https://github.com/diodeinc/pcb"
authors = ["Diode Computers, Inc. <founders@diode.computer>"]

[workspace.dependencies]
glam = "0.31.0"
starlark = { git = "https://github.com/diodeinc/starlark-rust", rev = "78a00c907de1f31ec4edee929447459612da9c94" }
starlark_map = { git = "https://github.com/diodeinc/starlark-rust", rev = "78a00c907de1f31ec4edee929447459612da9c94" }
starlark_derive = { git = "https://github.com/diodeinc/starlark-rust", rev = "78a00c907de1f31ec4edee929447459612da9c94" }
starlark_syntax = { git = "https://github.com/diodeinc/starlark-rust", rev = "78a00c907de1f31ec4edee929447459612da9c94" }
allocative = { git = "https://github.com/diodeinc/starlark-rust", rev = "78a00c907de1f31ec4edee929447459612da9c94" }

ruff_python_formatter = { git = "https://github.com/astral-sh/ruff", tag = "0.13.0" }
ruff_formatter = { git = "https://github.com/astral-sh/ruff", tag = "0.13.0" }

gltfpack-sys = "0.1.2"

mimalloc = "0.1"

similar = "2.7.0"

ipc2581 = { path = "crates/ipc2581" }
pcb-command-runner = { path = "crates/pcb-command-runner" }
pcb-eda = { path = "crates/pcb-eda" }
pcb-component-gen = { path = "crates/pcb-component-gen" }
pcb-layout = { path = "crates/pcb-layout" }
pcb-sch = { path = "crates/pcb-sch" }
pcb-canonical = { path = "crates/pcb-canonical" }
pcb-zen = { path = "crates/pcb-zen" }
pcb-zen-core = { path = "crates/pcb-zen-core" }
pcb-ui = { path = "crates/pcb-ui" }
pcb-kicad = { path = "crates/pcb-kicad" }
pcb-sexpr = { path = "crates/pcb-sexpr", features = ["serde"] }
pcb-starlark-lsp = { path = "crates/pcb-starlark-lsp" }
pcb-fmt = { path = "crates/pcb-fmt" }
pcb-test-utils = { path = "crates/pcb-test-utils" }
pcb-sim = { path = "crates/pcb-sim" }
pcb-diode-api = { path = "crates/pcb-diode-api" }
pcb-mcp = { path = "crates/pcb-mcp" }
pcb-docs = { path = "crates/pcb-docs" }
pcb-ipc2581-tools = { path = "crates/pcb-ipc2581-tools" }
pcb-docgen = { path = "crates/pcb-docgen" }

anyhow = "1.0"
atomicwrites = "0.4"
arboard = "3.4"
ariadne = { version = "0.6", features = ["auto-color"] }
axoupdater = { version = "0.9", features = ["blocking"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "wrap_help"] }
colored = "2"
derive_more = { version = "1.0.0", features = ["full"] }
dirs = "6"
dir_diff = "0.3.3"
dupe = "0.9.1"
duct = "1.1.0"
env_logger = "0.11"
indicatif = "0.17.8"
inquire = "0.7"
itertools = "0.13.0"
heck = "0.5.0"
log = "0.4"
lru = "0.12"
minijinja = "2.5"
once_cell = "1.21.3"
open = "5"
path-slash = "0.2.1"
termtree = "0.5"
regex = "1.11.0"
natord = "1.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-patch = "3.0"
junction = "1.4.2"
tempfile = "3.10.1"
thiserror = "1.0"
toml = "0.8"
uuid = { version = "1.4", features = ["v4", "v5"] }
walkdir = "2.3"
which = "7.0"
deunicode = "1.6"
insta = { version = "1.39", features = ["yaml", "filters", "json"] }
assert_cmd = "2.0"
assert_fs = "1.0"
base64 = "0.22"
console_error_panic_hook = "0.1"
console_log = "1.0.0"
crossterm = "0.29"
ctrlc = { version = "3.4", features = ["termination"] }
ratatui = "0.30"
ratatui-image = { version = "10.0", default-features = false, features = ["image-defaults", "crossterm"] }

image = "0.25"
csv = "1.4"
debugserver-types = "0.5.0"
derivative = "2.2"
display_container = "0.9.0"
either = "1.8"
fixedbitset = "0.4"
getrandom = "0.2"
globset = "0.4.13"
js-sys = "0.3"
lazy_static = "1.4"
lsp-server = "0.7.2"
lsp-types = "0.94.1"
maplit = "1.0.2"
md5 = "0.7"
os_pipe = "1.1.4"
paste = "1.0"
pathdiff = "0.2"
petgraph = "0.6"
rayon = "1.10"
regress = "0.10.2"
reqwest = { version = "0.12.19", default-features = false, features = ["blocking", "charset", "http2", "json", "multipart", "rustls-tls-webpki-roots", "system-proxy"] }
rand = "0.8"
serde-wasm-bindgen = "0.6"
serde_yaml = "0.9"
serial_test = "3.0"
smallvec = "1.15"
strip-ansi-escapes = "0.2"
supports-hyperlinks = "3"
tar = "0.4"
ruzstd = "0.8"
terminal_size = "0.4.0"
terminal_hyperlink = "0.1"
termimad = "0.31"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
textwrap = "0.11"
typify = "0.3.0"
unicode-width = "0.2.0"
urlencoding = "2.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }
zip = { version = "4.3", default-features = false, features = ["deflate"] }
flate2 = "1.0.34"
fslock = "0.2"
wasm-bindgen-futures = "0.4"
rust_decimal = { version = "1.38", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.38"
comfy-table = { version = "7.1", features = ["custom_styling"] }
url = "2.5"
dir-diff = "0.3"
ignore = "0.4"
sha2 = "0.10"
semver = { version = "1.0", features = ["serde"] }
quick-xml = "0.38"
zstd = "0.13"
jiff = "0.2"
blake3 = "1.5"
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"
unicode-normalization = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-chrome = "0.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"           # Maximum link-time optimization
codegen-units = 1     # Better optimization
strip = "debuginfo"   # Strip debug symbols
