[package]
name = "gerberx2"
version = "0.1.2"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Fast Gerber X2 parser, typed data model, and writer scaffolding for PCB fabrication layers"
license = "MIT OR Apache-2.0"
keywords = ["pcb", "gerber", "x2", "parser", "eda"]
categories = ["parsing", "hardware-support"]

[dependencies]
pcb-intern = { workspace = true }
pcb-ir = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
gerber_parser = "0.5.0"
