[package]
name = "ipc2581"
version = "0.3.3"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "IPC-2581 XML parser, typed data model, and XSD validation for PCB manufacturing data"
license = "MIT OR Apache-2.0"
keywords = ["pcb", "ipc-2581", "parser", "eda"]
categories = ["parsing", "hardware-support"]

[dependencies]
hex = { workspace = true }
pcb-intern = { workspace = true }
md-5 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
uppsala = { workspace = true }

[dev-dependencies]
zstd = { workspace = true }
