[package]
name = "pcb-ipc2581-tools"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
ipc2581 = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }
minijinja = { workspace = true }
pcb-sch = { workspace = true, features = ["table"] }
serde = { workspace = true }
serde_json = { workspace = true }
starlark_syntax = { workspace = true }
quick-xml = { workspace = true }
zstd = { workspace = true }
