[package]
name = "pcb-layout"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "PCB layout generation and management"

[dependencies]
anyhow = { workspace = true }
atomicwrites = { workspace = true }
thiserror = { workspace = true }
pcb-sch = { workspace = true }
pcb-sexpr = { workspace = true }
pcb-kicad = { workspace = true }
pcb-zen-core = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
starlark = { workspace = true }
include_dir = "0.7.4"

[dev-dependencies]
assert_fs = { workspace = true }
insta = { workspace = true }
serial_test = { workspace = true }
paste = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
serde_json = { workspace = true }
pcb-zen = { workspace = true }
regex = { workspace = true }
