[package]
name = "pcb-sch"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Schematic handling for PCB design"

[dependencies]
serde_jcs = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
pathdiff = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
natord = { workspace = true }
csv = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }
allocative = { workspace = true }
pagable = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true, optional = true }
colored = { workspace = true, optional = true }
supports-hyperlinks = { workspace = true, optional = true }
terminal_hyperlink = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }

[features]
default = []
table = ["comfy-table", "colored", "supports-hyperlinks", "terminal_hyperlink", "urlencoding"]

[dev-dependencies]
tempfile = { workspace = true }
