[package]
name = "pcb-test-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
hex = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
duct = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
globset = { workspace = true }
pcb-zen = { workspace = true }
