[package]
name = "pcb-zen-core"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Core functionality for Zen PCB design language"

[features]
default = ["native"]
native = [
    "dirs",
    "walkdir",
    "rayon",
]
wasm = []
table = ["pcb-sch/table"]

[dependencies]
allocative = { workspace = true }
pagable = { workspace = true }

starlark = { workspace = true }
starlark_map = { workspace = true }
starlark_syntax = { workspace = true }

anyhow = { workspace = true }
globset = { workspace = true }
itertools = { workspace = true }
heck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true, optional = true }
log = { workspace = true }
regex = { workspace = true }
ariadne = { workspace = true }
dirs = { workspace = true, optional = true }
toml = { workspace = true }
fixedbitset = { workspace = true }
smallvec = { workspace = true }
rust_decimal = { workspace = true }
pcb-eda = { workspace = true }
pcb-sch = { workspace = true }
pcb-sexpr = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true, optional = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
