[package]
name = "pcb-zen"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Zen language for PCB design"
documentation = "https://docs.rs/starlark"
categories = ["parser-implementations", "development-tools"]
keywords = ["starlark", "skylark", "language", "interpreter"]
license = "Apache-2.0"

[dependencies]
dupe = { workspace = true }
allocative = { workspace = true }
derive_more = { workspace = true }

starlark = { workspace = true }
pcb-starlark-lsp = { workspace = true }
starlark_map = { workspace = true }
starlark_derive = { workspace = true }
starlark_syntax = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
debugserver-types = { workspace = true }
either = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
itertools = { workspace = true }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
ariadne = { workspace = true }
once_cell = { workspace = true }
display_container = { workspace = true }
lsp-server = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
md5 = { workspace = true }
fslock = { workspace = true }
semver = { workspace = true }
jiff = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
unicode-normalization = { workspace = true }

pcb-kicad = { workspace = true }
pcb-sch = { workspace = true }
pcb-eda = { workspace = true }
pcb-zen-core = { workspace = true }
pcb-canonical = { workspace = true }
pcb-sim = { workspace = true }
pcb-ui = { workspace = true }
path-slash = { workspace = true }
termtree = { workspace = true }

[lib]
path = "src/lib.rs"

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
serde_yaml = { workspace = true }
zip = { workspace = true }
serial_test = { workspace = true }
