[package]
name = "pcb-zen"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Zen language for PCB design"
documentation = "https://docs.rs/starlark"
categories = ["parser-implementations", "development-tools"]
keywords = ["starlark", "skylark", "language", "interpreter"]
license = "Apache-2.0"

[dependencies]
dupe = { workspace = true }

starlark = { workspace = true }
pcb-starlark-lsp = { workspace = true }
starlark_syntax = { workspace = true }

anyhow = { workspace = true }
debugserver-types = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
ariadne = { workspace = true }
lsp-server = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
fslock = { workspace = true }
semver = { workspace = true }
jiff = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

pcb-sch = { workspace = true }
pcb-zen-core = { workspace = true }
pcb-canonical = { workspace = true }
pcb-sim = { workspace = true }
pcb-ui = { workspace = true }
path-slash = { workspace = true }
termtree = { workspace = true }

[lib]
path = "src/lib.rs"

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
serial_test = { workspace = true }
regex = { workspace = true }
