[package]
name = "pcb"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "next-gen tooling for pcb design"
homepage = { workspace = true }
authors = { workspace = true }
default-run = "pcb"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[package.metadata.wix]
upgrade-guid = "8F8B3FF2-0D55-454F-B80D-1E216FCA6C42"
path-guid = "019D9AC1-AFB6-4D44-9FE5-F7BCA676A7DF"
license = false
eula = false

[[bin]]
name = "pcb"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
glam = { workspace = true }
pcb-zen-core = { workspace = true, features = ["table"] }
pcb-zen = { workspace = true }
pcb-canonical = { workspace = true }
pcb-sch = { workspace = true, features = ["table"] }
pcb-layout = { workspace = true }
pcb-sim = { workspace = true }
pcb-mcp = { workspace = true }
pcb-docs = { workspace = true }
pcb-docgen = { workspace = true }
pcb-ipc2581-tools = { workspace = true }
pcb-eda = { workspace = true }
pcb-sexpr = { workspace = true }
pcb-component-gen = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
ariadne = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }
rand = { workspace = true }
pcb-kicad = { workspace = true }
open = { workspace = true }
inquire = { workspace = true }
pcb-ui = { workspace = true }
pcb-fmt = { workspace = true }
similar = { workspace = true }
pathdiff = { workspace = true }
path-slash = { workspace = true }
petgraph = { workspace = true }
starlark = { workspace = true }
starlark_syntax = { workspace = true }
comfy-table = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }
chrono = { workspace = true }
dir-diff = { workspace = true }
tempfile = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
semver = { workspace = true }
rayon = { workspace = true }
crossterm = { workspace = true }
ctrlc = { workspace = true }
terminal_size = { workspace = true }
termimad = { workspace = true }
syntect = { workspace = true }
unicode-width = { workspace = true }
indicatif = { workspace = true }
gltfpack-sys = { workspace = true }
thiserror = { workspace = true }
minijinja = { workspace = true }
canon-json = "0.2"
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }

mimalloc = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
duct = { workspace = true }
pcb-test-utils = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
