[package]
name = "pcb"
version = "0.2.4"
edition = { workspace = true }
repository = { workspace = true }
description = "PCB toolchain shim and version manager"
homepage = { workspace = true }
authors = { workspace = true }
default-run = "pcb"

[package.metadata.wix]
upgrade-guid = "8F8B3FF2-0D55-454F-B80D-1E216FCA6C42"
path-guid = "019D9AC1-AFB6-4D44-9FE5-F7BCA676A7DF"
license = false
eula = false

[[bin]]
name = "pcb"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
fslock = { workspace = true }
self-replace = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }
