[package]
name = "pcbc"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "next-gen tooling for pcb design"
homepage = { workspace = true }
authors = { workspace = true }
default-run = "pcbc"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "pcbc"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
glam = { workspace = true }
pcb-zen-core = { workspace = true, features = ["table"] }
pcb-zen = { workspace = true }
pcb-canonical = { workspace = true }
pcb-sch = { workspace = true, features = ["table"] }
pcb-layout = { workspace = true }
pcb-sim = { workspace = true }
pcb-docgen = { workspace = true }
pcb-ipc2581-tools = { workspace = true }
pcb-eda = { workspace = true }
pcb-sexpr = { workspace = true }
pcb-component-gen = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }
pcb-kicad = { workspace = true }
open = { workspace = true }
inquire = { workspace = true }
pcb-ui = { workspace = true }
pcb-fmt = { workspace = true }
gerberx2 = { workspace = true }
pcb-ir = { workspace = true }
similar = { workspace = true }
pathdiff = { workspace = true }
petgraph = { workspace = true }
starlark = { workspace = true }
comfy-table = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
ignore = { workspace = true }
semver = { workspace = true }
rayon = { workspace = true }
ctrlc = { workspace = true }
reqwest = { workspace = true }
termimad = { workspace = true }
syntect = { workspace = true }
thiserror = { workspace = true }
minijinja = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }

mimalloc = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
pcb-test-utils = { workspace = true }
jiff = { workspace = true }
